# bioTEA

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-change.md  feature_request.md  question.md
.github/workflows/: publish_on_release.yml  test_on_push.yml
bioTea/: __init__.py  __main__.py  classes.py  cli.py  docker_wrapper.py  pour.py  wizard.py
bioTea/resources/: bioTEA_run_default_options.yaml
bioTea/utils/: errors.py  path_checker.py  strings.py  tools.py
src/: .dockerignore  Dockerfile  base.Dockerfile
src/GATTACA/: .gitignore  entrypoint.R
src/GATTACA/shared/: annotations.R  logging.R
src/bioTea/: .bumpversion.cfg  .gitignore  README.md  requirements-dev.txt  requirements.txt  setup.cfg
src/bioTea/bioTea/: __init__.py  cli.py  docker_wrapper.py  pour.py  wizard.py
src/bioTea/bioTea/resources/: bioTEA_run_default_options.yaml  default_options.yml
src/bioTea/bioTea/utils/: errors.py  strings.py  tools.py  xml_parser.py
src/bioTea/tests/: test_integration.py  test_tools.py
src/bioTea/tests/test_files/Fake_options_files/: fake_batches_run_two_contrasts.yaml  fake_expression_run_wet.yaml
src/box/: entrypoint.R
src/box/shared/: design_parser.R  plots.R  tools.R
tests/: test_integration.py
tests/test_files/: fake_count_matrix.csv  fake_count_matrix_unsorted.csv  fake_expression_matrix.csv  fake_expression_matrix_annotatable.csv  fake_expression_matrix_annotatable_different_col_id.csv  fake_expression_matrix_different_col_id.csv  test_runs
tests/test_files/Fake_options_files/: fake_batches_run.yaml  fake_batches_run_two_contrasts.yaml  fake_counts_run.yaml  fake_expression_run.yaml  fake_expression_run_different_col_id.yaml  fake_expression_run_wet.yaml  fake_expression_run_with_annots.yaml  fake_expression_run_with_annots_different_col_id.yaml
(+20 files in other folders)
