[metadata]
name = bioTEA
version = 1.2.0
author = MrHedmad
author_email = luca.visentin@unito.it
description = Tea, short for Transcript Enrichment Analysis is a pipeline for performing Differential Expression Analysis on microarrays and RNA-seq data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/CMA-Lab/bioTEA
project_urls =
	Bug Tracker = https://github.com/CMA-Lab/bioTEA/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
include_package_data = True
packages = find:
install_requires =
	pandas
	tqdm
	xmltodict
	click<8.1.0
	typer
	colorama
	shellingham
	requests
	xmltodict
	pyyaml
	docker
	packaging
	fuzzywuzzy
	python-Levenshtein

python_requires = >=3.12

[options.package_data]
* = *.yml, *.yaml

[options.entry_points]
console_scripts =
	biotea = bioTea.cli:main
