[metadata]
name = bioTEA
version = 0.0.1
author = MrHedmad
author_email = luca.visentin@unito.it
description = Tea, short for Transportome Enrichment Analysis is a pipeline for processing microarray data to detect general transportome up- or down- regulation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MrHedmad/Tea
project_urls =
	Bug Tracker = https://github.com/MrHedmad/Tea/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: MIT License
	Operating System :: POSIX :: Linux

[options]
packages = bioTea
include_package_data = True
install_requires =
	pandas
	tqdm
	xmltodict
	click<8.1.0
	typer
	colorama
	shellingham
	requests
	xmltodict
	pyyaml
	docker
	packaging
	fuzzywuzzy

python_requires = >=3.6

[options.package_data]
* = *.yml,

[options.entry_points]
console_scripts =
	biotea = bioTea.cli:cli_root
